improve code style + untrack intelliJ files